--- a/docs/Configure/Real Time Content Security/2.0_Real_time_content_security.md
+++ b/docs/Configure/Real Time Content Security/2.0_Real_time_content_security.md
@@ -1,4 +1,4 @@
-## Real-time content security
+# 2.0 Real-time content security
 
 Configure security filters like SSL inspection, antivirus, content modifier, and image scanning.
 
